--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -710,7 +710,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 .hero-area-bg {
-  background: url(../img/hero-area-2.jpg) no-repeat;
+  background: url(../img/hero-area-2-lw-res.jpg) no-repeat;
   background-size: cover;
 }
 
